Nightro/css/nitro.css
/* Applies to: Nitro */

/* color pallete hex codes:
   Header bg: 204F6B
   body bg: 00111F


 */

/* Page backgrounds handled in main.js
  bg color: 292929 41,41,41
 */

/*Nitro Header bar */

div#header.main-header {
  background-image: none !important;
  background-color: #00447C !important;
}

span.fa-search, span.fa-phone, .fa-microphone, .fa-bars {
  color: white !important;
}

/* Breadcrumbs */

div#main-crumbs.navbar {
  background-image: none !important;
  background-color: #002340 !important;
  color: white !important;
}

div#main-crumbs.li {
  color: #749EB7 !important;
}

/*Hovering over breadcrumbs */

a:hover, a:hover *, a:visited:hover, a:visited:hover *, span[onclick]:hover, div[onclick]:hover, [role="link"]:hover, [role="link"]:hover *, [role="button"]:hover *, [role="menuitem"]:hover, [role="menuitem"]:hover *, .link:hover, .link:hover * {
  color: #B7B7B7 !important;
  background-color: #00447C !important;
}

/* -- SIDE MENU -- */

ul.full-menu * {
  background-image: none !important;
  background-color: #141A1E !important;
}

/* Dropdown menus */

div.dropdown-menu {
  background-image: none !important;
  background-color: #141A1E !important;
}

li.bg-danger {
  background-color: #5D2925
}

li.bg-success {
  background-color: #265234
}

/* Search Dropdown */

.tt-input {
  color: #b7b7b7 !important;
}

.tt-input, input {
  background-color: #455A6B !important;
}

/* TEXT AREAS */

textarea {
  background-color: #6B6B6B !important;
}

input {
  background-color: #6B6B6B !important;
}

/* Pill for Filter Display */

li.pill.pill-default {
  background-image: none !important;
  background-color: #749EB7 !important;
  color: #292929 !important;
}

/* Box around count and filter display */

.filter-display-description {
  background-color: #292929 !important;
}

/* -----SEARCH/FILTERS----- */

/* Pill for Filter Display */

li.pill.pill-default {
  background-image: none !important;
  background-color: #749EB7 !important;
  color: #292929 !important;
}

.font-weight-normal {
  color: #292929 !important;
}

/* Filter & Sorting Buttons */

.filter-display>div:nth-child(4)>a:nth-child(1) {
  background-color: #455A6B !important;
  color: #749EB7 !important;
}

/* Change Filter Button */

a.btn.btn-default {
  background-image: none !important;
  background-color: #455A6B !important;
  color: #749EB7 !important;
}

/* Sort Button */

button.btn.btn-default {
  background-image: none !important;
  background-color: #455A6B !important;
  color: #749EB7 !important;
}

/* Filter Window */

div.filter-form {
  background-image: none !important;
  background-color: #455A6B !important;
  color: #749EB7 !important;
}

/* DROPDOWNS */

.form-control.collection_select.optional, select.form-control, ul.select2-choices, select#q_reported_by_territory_id_eq {
  background-image: none !important;
  background-color: #6B6B6B;
  color: white
}

/*Sort Dropdown*/

ul.dropdown-menu {
  background-image: none !important;
  background-color: #455A6B !important;
  color: #749EB7 !important;
}

/* Box around count and filter display */

.filter-display-description {
  background-color: green
}

/* Submit Buttons */

input[type="button"]:hover, input[type="submit"]:not(.color):hover, input[type="reset"]:hover, button:hover, select:hover {
  color: #ACE !important;
  background-color: #B7B7B7 !important;
}

/* Page Title */

.row h2 {
  color: white;
}

/* Page Numbers */

ul.pagination * {
  background-image: none !important;
  background-color: #383838 !important;
}

.pagination>li>a {
  color: white !important;
  border-color: #455A6B !important;
}

.pagination>li>a:hover {
  background-color: #00447C !important;
}

div#tickets_table {
  background-image: none !important;
  background-color: red !important;
}

/* Body of Lists like Tickets */

thead * {
  background-image: none !important;
  background-color: #455A6B !important;
  color: #292929;
}

tr {
  background-image: none !important;
  background-color: #303030 !important;
}

tr:nth-child(even) {
  background-image: none !important;
  background-color: #383838 !important;
  text: #3B3B3B;
}

/* Status Text Color */

span.status.new {
  color: green;
}

span.status.wip {
  color: blue;
}

span.status.closed-resolved {
  color: red;
}

/* Panel Containers */

/* div.panel-heading {
  background-image: none !important;
  background-color: green !important;
}

div.panel-container {
  background-image: none !important;
  background-color: red !important;
} */

#ticket-560158 {
  /* Fuck this one ticket */
  color: red
}

/* DON'T ADJUST YET! */

/* GLOBAL CODE */

/* html, html * {
  color: #eeeeee !important;
  background-color: #222222 !important;
} */

/* html, html * {
  color: rgb(183, 183, 183) !important;
} */

/* * {
  border-color: #a4afaf !important;
} */

a, a[class] {
  color: #6091c1 !important;
}

li {
  color: #004db3 !important;
}

tr {
  color: #653d3d !important;
}

cite {
  color: #268 !important;
}

input {
  color: #257 !important;
}

em {
  color: #DEF !important;
}

ul {
  color: #650000 !important;
}

nobr {
  color: #4a0505 !important;
}

strong {
  color: #9CC !important;
}

b {
  color: #7AF !important;
}

a:visited, a:visited * {
  color: #607069 !important
}

a.highlight, a.highlight *, a.active, a.active *, .selected, .selected *, [href="#"] {
  color: #DDD !important;
  font-weight: bold !important
}

textarea, td {
  color: #ACE !important;
  /* text-shadow: -1px -1px #000, 1px -1px #000, -1px 1px #000, 1px 1px #000 !important; */
}

/* Removed selection color
 ::-moz-selection {
  color: #0FF !important;
  background-color: #333 !important;
}

 ::selection {
  color: #0FF !important;
  background-color: #333 !important;
}

 ::-webkit-selection {
  color: #0FF !important;
  background-color: #333 !important;
}
*/

abbr, progress, time, label, .date {
  color: #CDEFC2 !important;
}

mark, code, pre, blockquote, [class*="quote"], td[style*="inset"][class="alt2"] {
  background-color: #00090F !important;
}

/* Removed because dropdown icons were having black background unnecessarily.
nav, menu, html body [class*="open"], html body [id*="Dropdown"], html body [id*="dropdown"], html body [class*="Dropdown"],
html body [class*="dropdown"], html body [id*="menu"]:not(SELECT), html body [class*="menu"]:NOT(SELECT), html body [class*="tooltip"],
html body [class*="popup"], html body [id*="popup"], html body [class*="note"], html body [class*="detail"], html body [class*="description"] {
  background-color: #232323 !important;
}
 */

[onclick]:hover, [ondblclick]:hover, [onmousedown]:hover {
  color: #FEFF97 !important
}

